# OpenADAPT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Examples/: CMakeLists.txt  examples_ctti.h  examples_join.h  examples_plot.h  examples_rtti.h  main.cpp
Examples/en/: CMakeLists.txt  ctti_rtti_typed.cpp  main.cpp  quickstart_dhist.cpp  quickstart_dtable.cpp  quickstart_dtree.cpp  quickstart_join.cpp  quickstart_plot.cpp  quickstart_shist.cpp  quickstart_stable.cpp  quickstart_stree.cpp
Examples/jp/: CMakeLists.txt  examples_ctti.h  examples_join.h  examples_plot.h  examples_rtti.h  future_prospects.cpp  main.cpp
Generator/: CMakeLists.txt  Generate.cpp
OpenADAPT/: ADAPT.h  ADAPT.natvis
OpenADAPT/Common/: Bpos.h  Common.h  Concepts.h  Definition.h  Global.h  Macros.h
OpenADAPT/Container/: ElementBlock.h  ElementBlockPolicy.h  ElementRef.h  Hierarchy.h  Hist.h  JoinedContainer.h  Output.h  Tree.h
OpenADAPT/Evaluator/: ConstNode.h  FieldNode.h  FuncNode.h  Function.h  IndexNode.h  LayerFuncNode.h  MakeRttiFuncNode.h  MakeRttiFuncNode_gen.h  NodeBase.h  Placeholder.h  TryJoinNode.h
OpenADAPT/Joint/: CrossJoint.h  JointInterface.h  JointMethods.h  KeyJoint.h  LayerInfo.h  TopJoint.h
OpenADAPT/Plot/: ArrayData.h  Axes.h  Canvas.h  Core.h  PlotCommand.h
OpenADAPT/Range/: Evaluate.h  Extract.h  Filter.h  Hist.h  MakeHashtable.h  Output.h  RangeAdapter.h  To.h
OpenADAPT/Traverser/: ExternalTraverser.h  InternalTraverser.h  Traverser.h
OpenADAPT/Utility/: Any.h  Concepts.h  DArray.h  Exception.h  Expect.h  Function.h  Generics.h  KeywordArgs.h  Macro.h  Macros.h  Math.h  Matrix.h  Matrix_.h  NamedTuple.h  Print.h  Ranges.h  StaticString.h  TypeTraits.h  Utility.h  Verbose.h
Test/: Aggregator.h  CMakeLists.txt  OpenADAPT-student_list.txt  TestContainer.cpp  TestEvaluate.cpp  TestExtract.cpp  TestFilter.cpp  TestHist.cpp  TestJoint.cpp  TestLayerInfo.cpp  TestMatplot.cpp  TestMatrix.cpp  TestPlot.cpp  TestShow.cpp  TestTraverser.cpp  TestUserFunc.cpp
